--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^5.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "method-override": "^3.0.0",
